Fixed overflow

--- a/template/style.css
+++ b/template/style.css
@@ -11,19 +11,20 @@ section{
 .container {
     margin-top: 3em;
 }
+
 main {
     margin-top: 7em;    
 }
+
 body {
+    overflow-x: hidden;
     background-image: url("../images/background.jpg");
 }
-
 
 /* navbar */ 
 #top-left-logo {
     height: 70px;
 }
-
 
 /* index */
 .img-icon {
@@ -35,18 +36,15 @@ body {
 	margin-top: 0em !important;  
 }
 
-
 /* view_product */
 .img-gallery {
     width: 20% !important;
 }
 
-
 /* cart */
 .cart {
     margin-top: 7em;
 }
-
 
 /* orders */
 .order {
@@ -59,11 +57,11 @@ body {
 }
 */
 
-
 /* products */
 .card_product:hover .buttons {
 	opacity: 1
 }
+
 .card_product {
 	background-color:rgba(40, 40, 40, 0.8) !important;
 	border: 1px solid black;
@@ -79,12 +77,11 @@ body {
 	background-color:rgb(0, 0, 0, 1); 
 	*/
 }
+
 .product_text {
 	color: white;
 	font-family:'Franklin Gothic Medium';
 }
-
-
 
 /* profile */
 .user_profile_card {
@@ -94,11 +91,7 @@ body {
 	background-color: grey;
 }
 
-
-
 /* seller */
 .seller-nav-pad {
     padding-bottom: 2em;
 }
-
-
